add api to index.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,8 +14,8 @@
 
 
 	
-        {% block javascripts %}{% endblock %}
-		<script src="{{ asset('assets/js/script.js') }}"></script>
+        {% block javascripts %}<script src="{{ asset('assets/js/script.js') }}"></script>{% endblock %}
+		
 	</head>
 	<body>
 		
