--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -17,7 +17,7 @@
 <body>
     <h1>Ma première API</h1>
     <!-- <div class="grid"></div> -->
-    
+    <a href="{{path('api_createUser')}}">Ajouter un utilisateur</a>
     <ul id="liste"></ul>
     
     
