--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -17,6 +17,7 @@
 <body>
     <h1>Ma première API</h1>
     <!-- <div class="grid"></div> -->
+    <a href="{{path('api_get_all_user')}}">voir users</a>
     <ul id="liste"></ul>
     
     
